# gpu-playground

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  GEMINI.md  Readme.md  opencode.json
.agents/: README.md
.agents/rules/: backend_boundaries.md  cuda_optimization.md  kernel_harness_contract.md  opencl_portability.md  profiling_and_validation.md
.agents/skills/cuda-optimizer/: agent.md  skill.md
.agents/skills/docs-curator/: agent.md  skill.md
.agents/skills/kernel-author/: agent.md  skill.md
.agents/skills/opencl-reviewer/: agent.md  skill.md
.agents/skills/perf-diagnoser/: agent.md  skill.md
.claude/agents/: kernel-author.md
.codex/: config.toml
.codex/agents/: cuda-optimizer.toml  docs-curator.toml  kernel-author.toml  opencl-reviewer.toml  perf-diagnoser.toml
.cursor/rules/: cuda-optimizer.mdc  docs-curator.mdc  kernel-author.mdc  opencl-reviewer.mdc  perf-diagnoser.mdc
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/: copilot-instructions.md
.github/agents/: cuda-optimizer.md  perf-diagnoser.md
.github/workflows/: opencl-build.yml
.opencode/agent/: docs-curator.md  opencl-reviewer.md
docs/: EXAMPLES.md  adding-a-new-kernel.md  agentic-getting-started.md  building-on-google-colab.md  claude-code-guide.md  codex-guide.md  cuda-agent-guide.md  cuda-copilot-rules.md  external-frameworks.md  lora-linear-implementation-plan.md  opencl-3.1-migration-plan.md  opencl-agent-guide.md
docs/agentic_ai/: cuda_best_practice_agent_style.md  opencl_best_practice_agent_style.md
geglu/: CMakeLists.txt  geglu.cpp
gemm/: CMakeLists.txt  gemm.cpp
gpu-mode/: AMD_HACKATHON_GUIDE.md  HUMANITYS_LAST_HACKATHON_GUIDE.md  SETUP_GUIDE.md
gpu-mode/submissions/: humanitys_last_starter.py  mxfp4_mm_starter.py  nvfp4_gemm_baseline.py
gpu-mode/tools/: quickref.sh  setup.sh  submit.sh
interleave_arrays/: CMakeLists.txt  interleave.cpp
matrix_mul/: CMakeLists.txt
matrix_transpose/: CMakeLists.txt
prefix_sum/: CMakeLists.txt
reverse_array/: CMakeLists.txt
rgb_to_grayscale/: CMakeLists.txt  rgb_to_grayscale.cpp
sigmoid/: CMakeLists.txt  sigmoid.cpp
silu/: CMakeLists.txt  silu.cpp
softmax/: CMakeLists.txt
source/categorical_cross_entropy/: CMakeLists.txt  main.cpp
source/convolution2d/: CMakeLists.txt  main.cpp
source/convolution2d/cuda/: convolution2d.cpp  convolution2d.h
source/convolution2d/opencl/: convolution2d.cpp  convolution2d.h
source/convolution2d/opencl_cpp/: convolution2d.cpp
source/deep_learning_inference/: CMakeLists.txt  README.md  generate_weights.py  main.cpp  network_definition.py
source/fp16_dot_product/: CMakeLists.txt  main.cpp
source/geglu/: CMakeLists.txt  geglu.cpp  geglu.h  main.cpp
source/geglu/cuda/: geglu.cpp  geglu.h
source/geglu/opencl/: geglu.cpp  geglu.h
source/geglu/opencl_cpp/: geglu.cpp
source/gemm/: CMakeLists.txt  gemm.cpp  gemm.h  main.cpp
source/gemm/cuda/: gemm.cpp  gemm.h
source/gemm/opencl/: gemm.cpp
source/gemm/opencl_cpp/: gemm.cpp  gemm.h
source/interleave_arrays/: CMakeLists.txt  interleave.cpp  interleave.h  main.cpp
source/interleave_arrays/cuda/: interleave.cpp  interleave.h
source/interleave_arrays/opencl/: interleave.cpp
source/interleave_arrays/opencl_cpp/: interleave.cpp  interleave.h
source/lora_linear/: lora_linear_plan.md
source/matrix_mul/: CMakeLists.txt  main.cpp  matrix_mul.cpp  matrix_mul.h
source/matrix_mul/cuda/: matrix_mul.cpp  matrix_mul.h
source/matrix_mul/opencl/: matrix_mul.cpp
source/matrix_mul/opencl_cpp/: matrix_mul.cpp  matrix_mul.h
source/matrix_transpose/: CMakeLists.txt  main.cpp  matrix_transpose.cpp  matrix_transpose.h
source/matrix_transpose/cuda/: matrix_transpose.cpp  matrix_transpose.h
source/matrix_transpose/opencl/: matrix_transpose.cpp
source/matrix_transpose/opencl_cpp/: matrix_transpose.cpp  matrix_transpose.h
source/prefix_sum/: CMakeLists.txt  main.cpp  prefix_sum.cpp  prefix_sum.h
source/prefix_sum/cuda/: prefix_sum.cpp  prefix_sum.h
source/prefix_sum/opencl/: prefix_sum.cpp  prefix_sum.h
source/prefix_sum/opencl_cpp/: prefix_sum.cpp
source/reverse_array/: CMakeLists.txt  main.cpp  reverse.cpp  reverse.h
source/reverse_array/cuda/: reverse.cpp  reverse.h
source/reverse_array/opencl/: reverse.cpp
source/reverse_array/opencl_cpp/: reverse.cpp  reverse.h
source/rgb_to_grayscale/: CMakeLists.txt  main.cpp  rgb_to_grayscale.cpp  rgb_to_grayscale.h
source/rgb_to_grayscale/cuda/: rgb_to_grayscale.cpp  rgb_to_grayscale.h
source/rgb_to_grayscale/opencl/: rgb_to_grayscale.cpp
source/rgb_to_grayscale/opencl_cpp/: rgb_to_grayscale.cpp  rgb_to_grayscale.h
source/sigmoid/: CMakeLists.txt  main.cpp  sigmoid.cpp  sigmoid.h
source/sigmoid/cuda/: sigmoid.cpp  sigmoid.h
source/sigmoid/opencl/: sigmoid.cpp
source/sigmoid/opencl_cpp/: sigmoid.cpp  sigmoid.h
source/sigmoid/python/triton/: sigmoid.py
source/silu/: CMakeLists.txt  main.cpp  silu.cpp  silu.h
source/silu/cuda/: silu.cpp  silu.h
source/silu/opencl/: silu.cpp  silu.h
source/silu/opencl_cpp/: silu.cpp
source/softmax/: CMakeLists.txt  main.cpp  softmax.cpp  softmax.h
source/softmax/cuda/: softmax.cpp  softmax.h
source/softmax/opencl/: softmax.cpp
source/softmax/opencl_cpp/: softmax.cpp  softmax.h
source/spmv/: CMakeLists.txt  main.cpp  spmv.cpp  spmv.h
source/spmv/cuda/: spmv.cpp  spmv.h
source/spmv/opencl/: spmv.cpp  spmv.h
source/spmv/opencl_cpp/: spmv.cpp
source/swiglu/: CMakeLists.txt  main.cpp  swiglu.cpp  swiglu.h
source/swiglu/cuda/: swiglu.cpp  swiglu.h
source/swiglu/opencl/: swiglu.cpp
source/swiglu/opencl_cpp/: swiglu.cpp  swiglu.h
source/utils/: CMakeLists.txt  benchmark_helpers.h  cuda_helpers.h  opencl_c_helpers.h  opencl_helpers.h
source/value_clipping/: CMakeLists.txt  clip.cpp  clip.h  main.cpp
source/value_clipping/cuda/: clip.cpp  clip.h
source/value_clipping/opencl/: clip.cpp  clip.h
source/value_clipping/opencl_cpp/: clip.cpp
spmv/: CMakeLists.txt  spmv.cpp
swiglu/: CMakeLists.txt
value_clipping/: CMakeLists.txt  clip.cpp
(+11 files in other folders)
