if(USE_OPENCL_CPP)
    add_executable(convolution2d main.cpp opencl_cpp/convolution2d.cpp)
    target_link_libraries(convolution2d PRIVATE opencl_cpp_helpers)
    target_compile_definitions(convolution2d PRIVATE GPU_OPENCL_CPP_BACKEND)
elseif(USE_OPENCL)
    add_executable(convolution2d main.cpp opencl/convolution2d.cpp)
    target_link_libraries(convolution2d PRIVATE opencl_helpers)
    target_compile_definitions(convolution2d PRIVATE GPU_OPENCL_BACKEND)
else()
    set_source_files_properties(cuda/convolution2d.cpp main.cpp PROPERTIES LANGUAGE CUDA)
    add_executable(convolution2d main.cpp cuda/convolution2d.cpp)
    target_link_libraries(convolution2d PRIVATE cuda_helpers)
endif()
