if(USE_OPENCL)
    add_executable(geglu main.cpp opencl/geglu.cpp)
    target_link_libraries(geglu PRIVATE opencl_helpers)
    target_compile_definitions(geglu PRIVATE GPU_OPENCL_BACKEND)
else()
    set_source_files_properties(cuda/geglu.cpp main.cpp PROPERTIES LANGUAGE CUDA)
    add_executable(geglu main.cpp cuda/geglu.cpp)
    target_link_libraries(geglu PRIVATE cuda_helpers)
endif()
