if(USE_OPENCL_CPP)
    add_executable(gemm main.cpp opencl_cpp/gemm.cpp)
    target_link_libraries(gemm PRIVATE opencl_cpp_helpers)
    target_compile_definitions(gemm PRIVATE GPU_OPENCL_CPP_BACKEND)
elseif(USE_OPENCL)
    add_executable(gemm main.cpp opencl/gemm.cpp)
    target_link_libraries(gemm PRIVATE opencl_helpers)
    target_compile_definitions(gemm PRIVATE GPU_OPENCL_BACKEND)
else()
    set_source_files_properties(cuda/gemm.cpp main.cpp PROPERTIES LANGUAGE CUDA)
    add_executable(gemm main.cpp cuda/gemm.cpp)
    target_link_libraries(gemm PRIVATE cuda_helpers)
endif()
