if(USE_OPENCL)
    add_executable(interleave_arrays main.cpp opencl/interleave.cpp)
    target_link_libraries(interleave_arrays PRIVATE opencl_helpers)
    target_compile_definitions(interleave_arrays PRIVATE GPU_OPENCL_BACKEND)
else()
    set_source_files_properties(cuda/interleave.cpp main.cpp PROPERTIES LANGUAGE CUDA)
    add_executable(interleave_arrays main.cpp cuda/interleave.cpp)
    target_link_libraries(interleave_arrays PRIVATE cuda_helpers)
endif()
