if(USE_OPENCL)
    add_executable(matrix_mul main.cpp opencl/matrix_mul.cpp)
    target_link_libraries(matrix_mul PRIVATE opencl_helpers)
    target_compile_definitions(matrix_mul PRIVATE GPU_OPENCL_BACKEND)
else()
    set_source_files_properties(cuda/matrix_mul.cpp main.cpp PROPERTIES LANGUAGE CUDA)
    add_executable(matrix_mul main.cpp cuda/matrix_mul.cpp)
    target_link_libraries(matrix_mul PRIVATE cuda_helpers)
endif()
