if(USE_OPENCL_CPP)
    add_executable(matrix_transpose main.cpp opencl_cpp/matrix_transpose.cpp)
    target_link_libraries(matrix_transpose PRIVATE opencl_cpp_helpers)
    target_compile_definitions(matrix_transpose PRIVATE GPU_OPENCL_CPP_BACKEND)
elseif(USE_OPENCL)
    add_executable(matrix_transpose main.cpp opencl/matrix_transpose.cpp)
    target_link_libraries(matrix_transpose PRIVATE opencl_helpers)
    target_compile_definitions(matrix_transpose PRIVATE GPU_OPENCL_BACKEND)
else()
    set_source_files_properties(cuda/matrix_transpose.cpp main.cpp PROPERTIES LANGUAGE CUDA)
    add_executable(matrix_transpose main.cpp cuda/matrix_transpose.cpp)
    target_link_libraries(matrix_transpose PRIVATE cuda_helpers)
endif()
