if(USE_OPENCL_CPP)
    add_executable(prefix_sum main.cpp opencl_cpp/prefix_sum.cpp)
    target_link_libraries(prefix_sum PRIVATE opencl_cpp_helpers)
    target_compile_definitions(prefix_sum PRIVATE GPU_OPENCL_CPP_BACKEND)
elseif(USE_OPENCL)
    add_executable(prefix_sum main.cpp opencl/prefix_sum.cpp)
    target_link_libraries(prefix_sum PRIVATE opencl_helpers)
    target_compile_definitions(prefix_sum PRIVATE GPU_OPENCL_BACKEND)
else()
    set_source_files_properties(cuda/prefix_sum.cpp main.cpp PROPERTIES LANGUAGE CUDA)
    add_executable(prefix_sum main.cpp cuda/prefix_sum.cpp)
    target_link_libraries(prefix_sum PRIVATE cuda_helpers)
endif()
