if(USE_OPENCL)
    add_executable(reverse_array main.cpp opencl/reverse.cpp)
    target_link_libraries(reverse_array PRIVATE opencl_helpers)
    target_compile_definitions(reverse_array PRIVATE GPU_OPENCL_BACKEND)
else()
    set_source_files_properties(cuda/reverse.cpp main.cpp PROPERTIES LANGUAGE CUDA)
    add_executable(reverse_array main.cpp cuda/reverse.cpp)
    target_link_libraries(reverse_array PRIVATE cuda_helpers)
endif()
