if(USE_OPENCL_CPP)
    add_executable(rgb_to_grayscale main.cpp opencl_cpp/rgb_to_grayscale.cpp)
    target_link_libraries(rgb_to_grayscale PRIVATE opencl_cpp_helpers)
    target_compile_definitions(rgb_to_grayscale PRIVATE GPU_OPENCL_CPP_BACKEND)
elseif(USE_OPENCL)
    add_executable(rgb_to_grayscale main.cpp opencl/rgb_to_grayscale.cpp)
    target_link_libraries(rgb_to_grayscale PRIVATE opencl_helpers)
    target_compile_definitions(rgb_to_grayscale PRIVATE GPU_OPENCL_BACKEND)
else()
    set_source_files_properties(cuda/rgb_to_grayscale.cpp main.cpp PROPERTIES LANGUAGE CUDA)
    add_executable(rgb_to_grayscale main.cpp cuda/rgb_to_grayscale.cpp)
    target_link_libraries(rgb_to_grayscale PRIVATE cuda_helpers)
endif()
