if(USE_OPENCL_CPP)
    add_executable(sigmoid main.cpp opencl_cpp/sigmoid.cpp)
    target_link_libraries(sigmoid PRIVATE opencl_cpp_helpers)
    target_compile_definitions(sigmoid PRIVATE GPU_OPENCL_CPP_BACKEND)
elseif(USE_OPENCL)
    add_executable(sigmoid main.cpp opencl/sigmoid.cpp)
    target_link_libraries(sigmoid PRIVATE opencl_helpers)
    target_compile_definitions(sigmoid PRIVATE GPU_OPENCL_BACKEND)
else()
    set_source_files_properties(cuda/sigmoid.cpp main.cpp PROPERTIES LANGUAGE CUDA)
    add_executable(sigmoid main.cpp cuda/sigmoid.cpp)
    target_link_libraries(sigmoid PRIVATE cuda_helpers)
endif()
