if(USE_OPENCL)
    add_executable(silu main.cpp opencl/silu.cpp)
    target_link_libraries(silu PRIVATE opencl_helpers)
    target_compile_definitions(silu PRIVATE GPU_OPENCL_BACKEND)
else()
    set_source_files_properties(cuda/silu.cpp main.cpp PROPERTIES LANGUAGE CUDA)
    add_executable(silu main.cpp cuda/silu.cpp)
    target_link_libraries(silu PRIVATE cuda_helpers)
endif()
