if(USE_OPENCL)
    add_executable(softmax main.cpp opencl/softmax.cpp)
    target_link_libraries(softmax PRIVATE opencl_helpers)
    target_compile_definitions(softmax PRIVATE GPU_OPENCL_BACKEND)
else()
    set_source_files_properties(cuda/softmax.cpp main.cpp PROPERTIES LANGUAGE CUDA)
    add_executable(softmax main.cpp cuda/softmax.cpp)
    target_link_libraries(softmax PRIVATE cuda_helpers)
endif()
