if(USE_OPENCL)
    add_executable(spmv main.cpp opencl/spmv.cpp)
    target_link_libraries(spmv PRIVATE opencl_helpers)
    target_compile_definitions(spmv PRIVATE GPU_OPENCL_BACKEND)
else()
    set_source_files_properties(cuda/spmv.cpp main.cpp PROPERTIES LANGUAGE CUDA)
    add_executable(spmv main.cpp cuda/spmv.cpp)
    target_link_libraries(spmv PRIVATE cuda_helpers)
endif()
