if(USE_OPENCL)
    add_executable(swiglu main.cpp opencl/swiglu.cpp)
    target_link_libraries(swiglu PRIVATE opencl_helpers)
    target_compile_definitions(swiglu PRIVATE GPU_OPENCL_BACKEND)
else()
    set_source_files_properties(cuda/swiglu.cpp main.cpp PROPERTIES LANGUAGE CUDA)
    add_executable(swiglu main.cpp cuda/swiglu.cpp)
    target_link_libraries(swiglu PRIVATE cuda_helpers)
endif()
