if(USE_OPENCL)
    add_library(opencl_helpers INTERFACE)
    target_include_directories(opencl_helpers INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
    target_link_libraries(opencl_helpers INTERFACE OpenCL::OpenCL)
else()
    add_library(cuda_helpers INTERFACE)
    target_include_directories(cuda_helpers INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
endif()
