if(USE_OPENCL_CPP)
    add_executable(value_clipping main.cpp opencl_cpp/clip.cpp)
    target_link_libraries(value_clipping PRIVATE opencl_cpp_helpers)
    target_compile_definitions(value_clipping PRIVATE GPU_OPENCL_CPP_BACKEND)
elseif(USE_OPENCL)
    add_executable(value_clipping main.cpp opencl/clip.cpp)
    target_link_libraries(value_clipping PRIVATE opencl_helpers)
    target_compile_definitions(value_clipping PRIVATE GPU_OPENCL_BACKEND)
else()
    set_source_files_properties(cuda/clip.cpp main.cpp PROPERTIES LANGUAGE CUDA)
    add_executable(value_clipping main.cpp cuda/clip.cpp)
    target_link_libraries(value_clipping PRIVATE cuda_helpers)
endif()
